css/styles.css
*, *::before, *::after {
  box-sizing: border-box;
}

*:not(dialog) {
  margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  line-height: calc(1em + 0.5rem);
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

#root, #__next {
  isolation: isolate;
}

@font-face {
  font-family: 'Outfit';
  src: url('../fonts/Outfit-VariableFont_wght.woff2');
  font-weight: 100 900;
  font-display: swap;
}

:root {
  --white: hsl(0, 0%, 100%);
  --slate-300: hsl(212, 45%, 89%);
  --slate-500: hsl(216, 15%, 48%);
  --slate-900: hsl(218, 44%, 22%);
}

body {
  font-family: 'Outfit', sans-serif;
  background-color: var(--slate-300);
  font-size: .9375rem;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

.card {
  background-color: var(--white);
  max-width: 20rem;
  padding: 1rem;
  border-radius: 1.25rem;
  box-shadow: 0 1.5625rem 1.5625rem 0 rgba(0, 0, 0, 0.0477);
  margin:  1.6875rem;
}

.card__image {
  border-radius: .625rem;
}

.card__text {
  margin: 1.5rem 0;
  padding: 0 1rem;
  text-align: center;
}

.card__title {
  font-weight: 700;
  font-size: 1.375rem;
  color: var(--slate-900);
  line-height: 118.2%;
  margin-bottom: 1rem;
}

.card__description {
  font-weight: 400;
  color: var(--slate-500);
  line-height: 140%;
}

